--- a/generatorConfig.properties
+++ b/generatorConfig.properties
@@ -5,7 +5,7 @@ jdbc.url=jdbc:mysql://grdtest-m.dbsit.sfdc.com.cn:3306/grdtest
 #jdbc.url=jdbc:mysql://10.202.10.66:3306/iaas
 jdbc.username=grdtest
 jdbc.password=admin123
-my.package=com.ch.analysis
-my.table=BT_ERROR_RATE
+my.package=com.ch.cloud.kafka
+my.table=bt_topic_ext
 
 config.file.name=generatorConfig.1.xml
