主题获取与搜索

--- a/src/main/resources/config/application-sf.yml
+++ b/src/main/resources/config/application-sf.yml
@@ -27,4 +27,4 @@ logging:
 share:
   path:
     upload: share/${spring.application.name}/upload
-    libs: share/${spring.application.name}/libs
+    libs: /mnt/share/common/libs
