--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 # maven repo
-mavenUrl=http://nexus.sf-express.com/nexus/content/groups/public/
+mavenUrl=http://artifactory.sf-express.com/artifactory/maven
 mavenUrlStage=https://repository.apache.org/content/groups/staging/
 releaseUploadUrl=http://nexus.sf-express.com/nexus/content/repositories/releases/
 releaseUploadUserName=166046
 releaseUploadPassword=admin123
 snapshotUploadUrl=http://nexus.sf-express.com/nexus/content/repositories/snapshots/
 snapshotUploadUserName=01370603
-snapshotUploadPassword=Mazhimin`1
+snapshotUploadPassword=
