--- a/src/main/resources/config/application-sf.yml
+++ b/src/main/resources/config/application-sf.yml
@@ -2,28 +2,34 @@ spring:
   application:
     name: ch-kafka
   datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://grdtest-m.dbsit.sfdc.com.cn:3306/grdtest
     username: grdtest
     password: admin123
+
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      minimum-idle: 5
+      maximum-pool-size: 15
+      auto-commit: true
+      idle-timeout: 30000
+      pool-name: DatebookHikariCP
+      max-lifetime: 1800000
+      connection-timeout: 30000
+      connection-test-query: SELECT 1
   thymeleaf:
     mode: HTML5
     cache: false
   http:
     multipart:
       max-file-size: 20MB
-#ZooKeeper
-dubbo:
-  registry:
-    address: 10.202.107.137:2181
-    version: 1.0.0
 logging:
   config: classpath:config/logback.xml
   path: logs/${spring.application.name}
   level:
     com:
       ch: debug
+      alibaba: warn
 share:
   path:
     upload: share/${spring.application.name}/upload
