--- a/generatorConfig.properties
+++ b/generatorConfig.properties
@@ -6,6 +6,6 @@ jdbc.url=jdbc:mysql://grdtest-m.dbsit.sfdc.com.cn:3306/grdtest
 jdbc.username=grdtest
 jdbc.password=admin123
 my.package=com.ch.cloud.kafka
-my.table=bt_topic_ext
+my.table=bt_content_search
 
 config.file.name=generatorConfig.1.xml
