--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
   application:
     name: ch-kafka
   profiles:
-    active: sf
+    active: local
   main:
     allow-bean-definition-overriding: true #当遇到同样名字的时候，是否允许覆盖注册
   cloud:
@@ -19,4 +19,4 @@ spring:
       config:
         server-addr: 10.202.10.66:8848
         namespace: ${nacos.namespace:}
-        shared-dataids: ch-kafka.yml #,ch-sentinel.properties
+        shared-dataids: ch-kafka1.yml #,ch-sentinel.properties
