--- a/build.gradle
+++ b/build.gradle
@@ -77,8 +77,8 @@ dependencies {
 
     // https://mvnrepository.com/artifact/commons-io/commons-io
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
-    
-    implementation 'log4j:log4j:1.2.16'
+
+    compile 'org.slf4j:log4j-over-slf4j:1.7.26'
     /* dubbo service jar end*/
     // https://mvnrepository.com/artifact/io.protostuff/protostuff-core
     implementation group: 'io.protostuff', name: 'protostuff-core', version: '1.6.0'
