--- a/build.gradle
+++ b/build.gradle
@@ -78,7 +78,8 @@ dependencies {
     // https://mvnrepository.com/artifact/commons-io/commons-io
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 
-    compile 'org.slf4j:log4j-over-slf4j:1.7.26'
+    //log4j to slf4j
+    implementation 'org.slf4j:log4j-over-slf4j:1.7.26'
     /* dubbo service jar end*/
     // https://mvnrepository.com/artifact/io.protostuff/protostuff-core
     implementation group: 'io.protostuff', name: 'protostuff-core', version: '1.6.0'
