--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,38 @@
-buildscript {
-    ext {
-        springBootVersion = '1.4.3.RELEASE'
-    }
-    repositories {
-        mavenLocal()
-        mavenCentral()
-//        maven { url 'http://127.0.0.1:8081/repository/maven-public/' }
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath 'se.transmode.gradle:gradle-docker:1.2'
-    }
+plugins {
+    id 'org.springframework.boot' version '2.1.4.RELEASE'
+    id 'java'
 }
+
+apply plugin: 'io.spring.dependency-management'
+
+//apply from: 'buildApi.gradle'
+//apply from: 'mybatisGenerator.gradle'
+
 group 'com.ch'
 version '1.0.0-SNAPSHOT'
-
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply from: 'buildApi.gradle'
-apply from: 'mybatisGenerator.gradle'
-
-springBoot {
-    mainClass = "com.ch.cloud.kafka.KafkaApplication"
-}
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 [compileJava, compileTestJava, javadoc]*.options*.encoding = "UTF-8"
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 ext {
-    springBootVersion = '1.4.3.RELEASE'
+    springCloudVersion = 'Greenwich.RELEASE'
     chVersion = '1.0.1-SNAPSHOT'
 }
+
 repositories {
     mavenLocal()
+    jcenter()
     mavenCentral()
-//    maven { url 'http://nexus.sf-express.com/nexus/content/groups/public/' }
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-//    compile fileTree(dir: "$projectDir/libs", include: ['*.jar'])
 
     //私有相关包
     compile("com.ch:ch-core:${chVersion}") {
@@ -49,17 +41,17 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.guava/guava
     compile group: 'com.google.guava', name: 'guava', version: '21.0'
 
-//    compile 'com.google.guava:guava:18.0'
     //spring boot相关包
     compile 'org.springframework.boot:spring-boot-starter'
-    compile 'org.springframework.boot:spring-boot-starter-web', {
-        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
-    }
+    compile 'org.springframework.boot:spring-boot-starter-web'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 
 //    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    compile 'org.springframework.boot:spring-boot-starter-jetty'
-    compile 'org.springframework.boot:spring-boot-starter-redis'
+
+    compile 'org.springframework.boot:spring-boot-starter-data-redis'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+//    compile 'org.redisson:redisson-spring-boot-starter:3.11.6'
+//    compile 'org.redisson:redisson:3.11.6'
 
     //数据源相关包
     compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.1.1'
@@ -74,12 +66,12 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.apache.kafka/kafka
     compile group: 'org.apache.kafka', name: 'kafka_2.11', version: '0.8.2.0', {
-        exclude group: 'log4j', module: 'log4j'
+//        exclude group: 'log4j', module: 'log4j'
         exclude group: 'org.slf4j'
     }
 
     // https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka
-    compile('org.springframework.kafka:spring-kafka:1.0.0.RELEASE')
+//    compile('org.springframework.kafka:spring-kafka:2.1.0.RELEASE')
 
     /* dubbo微服务依赖包 dubbo service jar start*/
     compile('com.alibaba:dubbo:2.5.3') {
@@ -100,10 +92,10 @@ dependencies {
     // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 
-
 }
+
 dependencyManagement {
     imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Camden.SR3'
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
