--- a/build.gradle
+++ b/build.gradle
@@ -71,14 +71,12 @@ dependencies {
     }
     // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     // https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka
 //    implementation('org.springframework.kafka:spring-kafka:2+')
 
-    // https://mvnrepository.com/artifact/commons-io/commons-io
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
-
+    implementation 'org.gavaghan:geodesy:1.1.3'
     //log4j to slf4j
     implementation 'org.slf4j:log4j-over-slf4j:1.7.26'
     /* dubbo service jar end*/
