--- a/src/main/resources/config/application-test.yml
+++ b/src/main/resources/config/application-test.yml
@@ -1,30 +1,48 @@
 server:
-  port: 8006
+  port: 7004
+
 spring:
+  application:
+    name: ch-kafka
   datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-#    type: com.ch.jdbc.pool.ZhDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://10.202.10.66:3306/admin
+    url: jdbc:mysql://mysql.nacos.svc.cluster.local:3306/ch_mq
     username: admin
     password: 123456
+
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      minimum-idle: 5
+      maximum-pool-size: 15
+      auto-commit: true
+      idle-timeout: 30000
+      pool-name: DatebookHikariCP
+      max-lifetime: 1800000
+      connection-timeout: 30000
+      connection-test-query: SELECT 1
   thymeleaf:
     mode: HTML5
     cache: false
-  http:
-    multipart:
-      max-file-size: 20MB
-#ZooKeeper
-dubbo:
-  registry:
-    address: 10.202.10.66:2181
 logging:
   config: classpath:config/logback.xml
-  path: logs/ch-sys
+  path: logs/${spring.application.name}
   level:
     com:
       ch: debug
+      alibaba: warn
 share:
   path:
-    upload: share/${spring.appliction.name}/upload
-    libs: share/${spring.appliction.name}/libs
+    upload: share/${spring.application.name}/upload
+    libs: /mnt/share/common/libs
+rocketmq:
+  namesrv:
+    addr: rmqnamesrv.rocket-mq.svc.cluster.local:9876
+    isVIPChannel: true
+    consoleCollectData: /tmp/rocket/console/data
+  console:
+    data: /tmp/rocketmq-console/data
+  name-server: rmqnamesrv.rocket-mq.svc.cluster.local:9876 # 自己的RocketMQ服务地址
+  #  name-server: false
+  producer:
+    send-message-timeout: 300000
+    group: ch-kafka
