--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ ext {
     alicloudVersion = '+' //0.2.1.RELEASE,0.9.0.RELEASE
     chVersion = '2.0.0-SNAPSHOT' //0.2.1.RELEASE
     rocketmqVersion = '4.0.0-incubating' //0.2.1.RELEASE
+    kafkaVersion = '1.1.0' //0.8.2.0
 }
 configurations {
     compileOnly {
@@ -29,6 +30,10 @@ configurations {
 
 repositories {
     mavenLocal()
+    maven {
+        allowInsecureProtocol = true
+        url 'http://192.168.0.253:8081/repository/maven-public/'
+    }
     maven { url "https://maven.aliyun.com/repository/central" }
     mavenCentral()
     maven { url "https://repo.spring.io/milestone" }
@@ -40,6 +45,7 @@ dependencies {
     implementation("com.ch:ch-core:${chVersion}")
 //    implementation("com.ch:ch-helper:${chVersion}")
     implementation("com.ch:ch-mybatis:${chVersion}")
+//    implementation(fileTree("${rootDir}/other/libs"))
 
     //spring boot相关包
     implementation 'org.springframework.boot:spring-boot-starter'
@@ -53,40 +59,42 @@ dependencies {
 //    implementation 'org.springframework.boot:spring-boot-starter-redis'
 
     //数据源相关包
-    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.1.1'
-    implementation "mysql:mysql-connector-java:5.1.30"
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+    implementation 'mysql:mysql-connector-java:8.0.28'
 
 //    implementation 'org.apache.rocketmq:rocketmq-spring-boot-starter:2.1.0'
     implementation "org.apache.rocketmq:rocketmq-tools:${rocketmqVersion}"
     implementation "org.apache.rocketmq:rocketmq-namesrv:${rocketmqVersion}"
     implementation "org.apache.rocketmq:rocketmq-broker:${rocketmqVersion}"
-    implementation 'org.jooq:joor:0.9.6'
+    implementation 'org.jooq:joor:0.9.14'
 
     implementation 'io.dubbo.springboot:spring-boot-starter-dubbo:1.0.0'
 
 //     https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients
-    implementation 'org.apache.kafka:kafka-clients:0.8.2.0', {
-        exclude group: 'log4j', module: 'log4j'
-        exclude group: 'org.slf4j'
-    }
+//    implementation "org.apache.kafka:kafka-clients:${kafkaVersion}", {
+//        exclude group: 'log4j', module: 'log4j'
+//        exclude group: 'org.slf4j'
+//    }
 //    implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '2.0.0'
 
     // https://mvnrepository.com/artifact/org.apache.kafka/kafka
-    implementation group: 'org.apache.kafka', name: 'kafka_2.11', version: '0.8.2.0', {
+    implementation group: 'org.apache.kafka', name: 'kafka_2.11', version: "${kafkaVersion}", {
         exclude group: 'log4j', module: 'log4j'
         exclude group: 'org.slf4j'
     }
-    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    implementation "org.springframework.kafka:spring-kafka:2.2.10.RELEASE"
+
+    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
 //    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     // https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka
 //    implementation('org.springframework.kafka:spring-kafka:2+')
-    compile 'redis.clients:jedis:3.1.0'
+    implementation 'redis.clients:jedis:3.1.0'
 
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation 'org.gavaghan:geodesy:1.1.3'
     //log4j to slf4j
-    implementation 'org.slf4j:log4j-over-slf4j:1.7.26'
+    implementation 'org.slf4j:log4j-over-slf4j:1.7.36'
     /* dubbo service jar end*/
     // https://mvnrepository.com/artifact/io.protostuff/protostuff-core
     implementation group: 'io.protostuff', name: 'protostuff-core', version: '1.6.0'
