--- a/src/main/resources/config/application-local.yml
+++ b/src/main/resources/config/application-local.yml
@@ -5,11 +5,10 @@ spring:
   application:
     name: ch-kafka
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://canalmgr-m.dbsit.sfcloud.local:3306/ch_mq
-    username: zhimin
-    password: admin123
-
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://192.168.0.250:30307/ch_mq?characterEncoding=UTF-8&serverTimezone=GMT
+    username: admin
+    password: 123456
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
       minimum-idle: 5
@@ -36,7 +35,7 @@ share:
     libs: D:\\mnt\\share\\common\\libs
 rocketmq:
   namesrv:
-    addr: 10.206.46.77:9876
+#    addr: 10.206.46.77:9876
     isVIPChannel: true
     consoleCollectData: D:\\tmp\\rocket\\console\\data
   console:
