--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ ext {
     alicloudVersion = '+' //0.2.1.RELEASE,0.9.0.RELEASE
     chVersion = '2.0.0-SNAPSHOT' //0.2.1.RELEASE
     rocketmqVersion = '4.0.0-incubating' //0.2.1.RELEASE
-    kafkaVersion = '1.1.0' //0.8.2.0
+    kafkaVersion = '1.1.1' //0.8.2.0
 }
 configurations {
     compileOnly {
@@ -75,14 +75,14 @@ dependencies {
 //        exclude group: 'log4j', module: 'log4j'
 //        exclude group: 'org.slf4j'
 //    }
-//    implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '2.0.0'
+    implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '2.8.0'
 
     // https://mvnrepository.com/artifact/org.apache.kafka/kafka
     implementation group: 'org.apache.kafka', name: 'kafka_2.11', version: "${kafkaVersion}", {
         exclude group: 'log4j', module: 'log4j'
         exclude group: 'org.slf4j'
     }
-    implementation "org.springframework.kafka:spring-kafka:2.2.10.RELEASE"
+    implementation 'org.springframework.kafka:spring-kafka:2.8.3'
 
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
