--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>ch-devops-client</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>com.ch</groupId>
+            <artifactId>ch-mybatis</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
