--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.alibaba.cloud</groupId>
         <artifactId>spring-cloud-alibaba</artifactId>
-        <version>2021.0.1.1-SNAPSHOT</version>
+        <version>2021.0.1.0</version>
     </parent>
     <groupId>com.ch.cloud</groupId>
     <artifactId>ch-devops</artifactId>
@@ -42,7 +42,7 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2021.0.1.1-SNAPSHOT</version>
+                <version>2021.0.1.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
