add nacos manager

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,15 @@
         <ch.cloud.version>2.0.0-SNAPSHOT</ch.cloud.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
