--- a/service/pom.xml
+++ b/service/pom.xml
@@ -21,5 +21,9 @@
             <artifactId>ch-devops-dao</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
     </dependencies>
 </project>
