--- a/service/pom.xml
+++ b/service/pom.xml
@@ -25,5 +25,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.ch</groupId>
+            <artifactId>ch-upms-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
