--- a/xxx/k8s-deploy.yaml
+++ b/xxx/k8s-deploy.yaml
@@ -14,11 +14,12 @@ spec:
       app: ch-devops
   template:
     metadata:
+      creationTimestamp: null
       labels:
         app: ch-devops
     spec:
       containers:
-        - name: container-ncrbja
+        - name: container-xzcbje
           image: 'registry.kubeoperator.io:8082/ch/ch-devops:${DATETIME}'
           ports:
             - name: tcp-8080
@@ -28,6 +29,6 @@ spec:
             - name: JAVA_OPTS
               value: >-
                 -Dnacos.config.server-addr=nacos.public.svc.cluster.local:8848
-                -Dnacos.config.namespace=ff29ab57-4f4c-4c7a-8c96-d8ad70459d50
+                -Dnacos.config.namespace=4da0a4df-ea8e-4906-b53f-8e30884e1346
       imagePullSecrets:
         - name: ch-nexus
