--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 #topic
 kafka.app.topic.foo=myuu_pft_evolute_group_product
 
+
+mapper.enum-as-simple-type=true
+
+
