change nacos cluster namespace

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -16,5 +16,6 @@ kafka.app.topic.foo=myuu_pft_evolute_group_product
 
 
 mapper.enum-as-simple-type=true
+#mybatis.configuration.default-enum-type-handler=org.apache.ibatis.type.EnumOrdinalTypeHandler
 
 
