--- a/service/pom.xml
+++ b/service/pom.xml
@@ -26,8 +26,8 @@
             <artifactId>spring-context</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.ch</groupId>
-            <artifactId>ch-upms-api</artifactId>
+            <groupId>com.ch.cloud</groupId>
+            <artifactId>ch-upms-client</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
