--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -14,8 +14,11 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 #topic
 kafka.app.topic.foo=myuu_pft_evolute_group_product
 
-
+mybatis.mapper-locations=classpath*:**/mapper/*.xml
+mybatis.type-aliases-package=com.ch.cloud.devops.dto
+mybatis.configuration.map-underscore-to-camel-case=true
 mapper.enum-as-simple-type=true
 #mybatis.configuration.default-enum-type-handler=org.apache.ibatis.type.EnumOrdinalTypeHandler
+
 
 
