optimize rest template config

--- a/web/src/main/docker/Dockerfile
+++ b/web/src/main/docker/Dockerfile
@@ -5,6 +5,7 @@ RUN sh -c 'mv skywalking-agent agent'
 ADD ch-devops-*-SNAPSHOT.jar app.jar
 RUN sh -c 'touch /app.jar'
 ENV JAVA_OPTS=""
+ENV AGENT_OPTS="-javaagent:/agent/skywalking-agent.jar"
 
 EXPOSE 8080
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -javaagent:/agent/skywalking-agent.jar -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS $AGENT_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
