--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,8 @@
         <java_source_version>1.8</java_source_version>
         <java_target_version>1.8</java_target_version>
         <file_encoding>UTF-8</file_encoding>
-        <ch.cloud.version>2.0.0-SNAPSHOT</ch.cloud.version>
+        <ch.version>2.0.1-SNAPSHOT</ch.version>
+        <ch.cloud.version>2.0.1-SNAPSHOT</ch.cloud.version>
     </properties>
 
     <dependencies>
@@ -54,6 +55,31 @@
                 <version>2021.0.1.0</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.ch.cloud</groupId>
+                <artifactId>ch-devops-client</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ch.cloud</groupId>
+                <artifactId>ch-devops-dao</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ch.cloud</groupId>
+                <artifactId>ch-devops-service</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ch</groupId>
+                <artifactId>ch-core</artifactId>
+                <version>${ch.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ch</groupId>
+                <artifactId>ch-mybatis</artifactId>
+                <version>${ch.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
