--- a/service/pom.xml
+++ b/service/pom.xml
@@ -19,7 +19,6 @@
         <dependency>
             <groupId>com.ch.cloud</groupId>
             <artifactId>ch-devops-dao</artifactId>
-            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -68,12 +67,12 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.8.0.M3</version>
+            <version>5.8.7</version>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.5.0.RC1</version>
+            <version>1.5.2.Final</version>
         </dependency>
     </dependencies>
 </project>
