--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -3,22 +3,13 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 spring.profiles.active=local
-#kafka configuration
-spring.kafka.consumer.enable-auto-commit=true
-spring.kafka.consumer.group-id=test2
-spring.kafka.consumer.bootstrap-servers=192.168.20.211:9092
-spring.kafka.consumer.auto-offset-reset=earliest
 
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-#topic
-kafka.app.topic.foo=myuu_pft_evolute_group_product
 
-mybatis.mapper-locations=classpath*:**/mapper/*.xml
-mybatis.type-aliases-package=com.ch.cloud.devops.dto
-mybatis.configuration.map-underscore-to-camel-case=true
-mapper.enum-as-simple-type=true
-#mybatis.configuration.default-enum-type-handler=org.apache.ibatis.type.EnumOrdinalTypeHandler
+springfox.documentation.enabled=true
+springfox.documentation.open-api.enabled=true
+
+
+
 
 
 
